Fix on deployer, Update Proposal Contract

--- a/config.json
+++ b/config.json
@@ -11,8 +11,8 @@
     "asc_testnet_main_address": "7M6P73M5ZCAUKRPBOFFQA3A7HGHNJCZLQCPMIBKBRWN3PYFWVGIWFNALRQ",
     "asc_proposal_id": 0,
     "asc_proposal_address": "",
-    "asc_testnet_proposal_id": 0,
-    "asc_testnet_proposal_address": "",
+    "asc_testnet_proposal_id": 734164984,
+    "asc_testnet_proposal_address": "D2IHVDCRRJLYUY2KIQTX2T27F4SGXU7OJH7UFIS4QEQAWWUV2SQPPVTHYM",
     "asc_staking_id": 2275538487,
     "asc_staking_address": "6O2SEGD6UEL6AK4QLMB4OGYSQFC54X3PBKFMMKBJM2NKVTOF4NJS3KXAEE",
     "asc_testnet_staking_id": 718248288,
@@ -31,7 +31,7 @@
     "staking_is_staked": true,
     "staking_is_unstaked": true,
     "staking_asa_distributed": true,
-    "dao_proposal_deployed": false,
+    "dao_proposal_deployed": true,
     "proposal_is_activated": false,
     "proposal_asa_distributed": true,
     "participated_to_proposal": false,
