--- a/config.json
+++ b/config.json
@@ -7,12 +7,12 @@
     "gora_testnet_token_id": 227418519,
     "gora_token_id": 1138500612,
     "enforce_gora_token": true,
-    "asc_testnet_main_id": 733685089,
-    "asc_testnet_main_address": "7M6P73M5ZCAUKRPBOFFQA3A7HGHNJCZLQCPMIBKBRWN3PYFWVGIWFNALRQ",
+    "asc_testnet_main_id": 734695636,
+    "asc_testnet_main_address": "KZLZWXLKBIPELE7C6SEMIV5GAOIRZZQ5QQJCMPBOF7M4H6EBVFNWRB2EAM",
     "asc_proposal_id": 0,
     "asc_proposal_address": "",
-    "asc_testnet_proposal_id": 734471687,
-    "asc_testnet_proposal_address": "XU5AF6LGSMA7OMF5MSE76GLC3YH2KC7IAN2AWFSL2O57W3MKC6KSVNXUOU",
+    "asc_testnet_proposal_id": 0,
+    "asc_testnet_proposal_address": "",
     "asc_staking_id": 2275538487,
     "asc_staking_address": "6O2SEGD6UEL6AK4QLMB4OGYSQFC54X3PBKFMMKBJM2NKVTOF4NJS3KXAEE",
     "asc_testnet_staking_id": 718248288,
@@ -25,16 +25,16 @@
     "staking_testnet_asa_id": 227418519,
     "dao_dao_deployed": true,
     "dao_asa_distributed": true,
-    "subscribed_to_dao": true,
+    "subscribed_to_dao": false,
     "dao_staking_deployed": true,
     "staking_is_activated": true,
     "staking_is_staked": true,
     "staking_is_unstaked": true,
     "staking_asa_distributed": true,
-    "dao_proposal_deployed": true,
-    "dao_proposal_configured": true,
+    "dao_proposal_deployed": false,
+    "dao_proposal_configured": false,
     "proposal_is_activated": false,
-    "proposal_asa_distributed": true,
+    "proposal_asa_distributed": false,
     "participated_to_proposal": false,
     "proxy_staking_optin_all": false,
     "proxy_staking_is_opted_in": false,
