New clean GoraDAO, second alpha test

--- a/config.json
+++ b/config.json
@@ -2,13 +2,13 @@
   "gora_dao": {
     "host": "",
     "network": "testnet",
-    "asc_main_id": 2275537538,
-    "asc_main_address": "OPLMHQZCNKPZEGO6MMVL235SA7L7KNQBGVZK6NVPPNC6RQ6QGLCCWD57ZQ",
+    "asc_main_id": 0,
+    "asc_main_address": "",
     "gora_testnet_token_id": 227418519,
     "gora_token_id": 1138500612,
     "enforce_gora_token": true,
-    "asc_testnet_main_id": 734695636,
-    "asc_testnet_main_address": "KZLZWXLKBIPELE7C6SEMIV5GAOIRZZQ5QQJCMPBOF7M4H6EBVFNWRB2EAM",
+    "asc_testnet_main_id": 735960732,
+    "asc_testnet_main_address": "T4RIAFZXUFH5GRQJLXMN2RJTL37FXMHBFAJR3INE67HIKPKVQ6XV75WPOI",
     "asc_proposal_id": 0,
     "asc_proposal_address": "",
     "asc_testnet_proposal_id": 0,
